feat(clearcore): Add stack monitoring and improve platformio config
This commit introduces stack monitoring capabilities to the ClearCore project and refines the PlatformIO configuration.

The changes include:

-   Adding stack monitoring functionality using `stack-debug.h`.
-   Periodically checking and reporting stack usage within the `loop()` function.
-   Enabling stack monitoring via the `STACK_MONITORING_ENABLED` preprocessor directive.
-   Updating `platformio.ini`:
    -   Using the official `atmelsam` platform.
    -   Adding build flags for stack usage analysis and enabling stack monitoring.
-   Improving `.gitignore` to ignore all `.vsidx` files.

This enhancement provides insights into stack usage, aiding in memory management and optimization.

--- a/clearcore/platformio.ini
+++ b/clearcore/platformio.ini
@@ -9,14 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:clearcore]
-platform = https://github.com/patrickwasp/platform-atmelsam
+platform = atmelsam
 board = clearcore
 framework = arduino
-
-; Debugging configuration for Atmel-ICE
+upload_protocol = atmel-ice
 debug_tool = atmel-ice
 debug_init_break = tbreak setup
-upload_protocol = atmel-ice
-debug_build_flags = -O0 -g -ggdb
-debug_server =
-debug_load_mode = modified
+build_flags = 
+  -fstack-usage
+  -D STACK_MONITORING_ENABLED
