Everything is broken at the moment - uploading rough ClearCore code

--- a/clearcore/platformio.ini
+++ b/clearcore/platformio.ini
@@ -18,3 +18,5 @@ debug_init_break = tbreak setup
 build_flags = 
   -fstack-usage
   -D STACK_MONITORING_ENABLED
+monitor_speed = 115200
+test_build_project_src = true
