some things are starting to work, WIP

--- a/clearcore/platformio.ini
+++ b/clearcore/platformio.ini
@@ -16,7 +16,10 @@ upload_protocol = atmel-ice
 debug_tool = atmel-ice
 debug_init_break = tbreak setup
 build_flags = 
-  -fstack-usage
-  -D STACK_MONITORING_ENABLED
+	-fstack-usage
+	-D STACK_MONITORING_ENABLED
 monitor_speed = 115200
 test_build_project_src = true
+lib_deps = 
+	arduino-libraries/Servo@^1.2.2
+	arduino-libraries/SD@^1.3.0
