Iteration for review, again WIP

--- a/clearcore/platformio.ini
+++ b/clearcore/platformio.ini
@@ -19,7 +19,7 @@ build_flags =
 	-fstack-usage
 	-D STACK_MONITORING_ENABLED
 monitor_speed = 115200
-test_build_project_src = true
+test_build_src = true
 lib_deps = 
 	arduino-libraries/Servo@^1.2.2
 	arduino-libraries/SD@^1.3.0
