Iteration for review, again WIP, there are compile errors

--- a/clearcore/platformio.ini
+++ b/clearcore/platformio.ini
@@ -20,5 +20,4 @@ build_flags =
 	-D STACK_MONITORING_ENABLED
 monitor_speed = 115200
 test_build_src = true
-lib_deps = 
-	arduino-libraries/SD@^1.3.0
+lib_deps = arduino-libraries/SD@^1.3.0
