--- a/space-maquette-frontend/space-maquette-server/package.json
+++ b/space-maquette-frontend/space-maquette-server/package.json
@@ -4,18 +4,21 @@
     "description": "Backend server for Space Maquette project",
     "main": "src/index.js",
     "scripts": {
-      "start": "node src/index.js",
-      "dev": "nodemon src/index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-      "body-parser": "^1.20.1",
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "socket.io": "^4.8.1",
-      "sqlite3": "^5.1.4"
+        "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "node-webcam": "^0.8.2",
+        "obs-websocket-js": "^5.0.6",
+        "socket.io": "^4.8.1",
+        "socket.io-stream": "^0.9.1",
+        "sqlite3": "^5.1.4"
     },
     "devDependencies": {
-      "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20"
     }
-  }
+}
