--- a/space-maquette-frontend/space-maquette-ui/package.json
+++ b/space-maquette-frontend/space-maquette-ui/package.json
@@ -21,11 +21,11 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "overrides": {
-  "nth-check": "^2.0.1",
-  "semver": "^7.5.2"
-}
+    "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "semver": "^7.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
