feat: Add testing infrastructure and initial tests
This commit introduces a comprehensive testing suite for the Space Maquette server, including unit, integration, and safety tests.

- **Jest Configuration:**
    - Adds `jest.config.js` for test configuration, including coverage settings, test environment, and setup files.
- **Test Helpers:**
    - Creates `test-helpers.js` with utility functions for creating mock Socket.IO instances, saving/restoring state, and creating mock responses and requests.
- **Test Setup:**
    - Adds `jest.setup.js` for global test setup, including mocking Socket.IO, state, and database modules.
- **Unit Tests:**
    - Adds initial unit tests for `motion-solver.test.js`, `state.test.js`, and `motion-controller.test.js`.
- **Integration Tests:**
    - Adds initial integration tests for `socket-handlers.test.js` and `safety-features.test.js`.
- **Test Coverage:**
    - Configures Jest to collect coverage information and generate reports.
- **Test Scripts:**
    - Updates `package.json` to include test scripts for running all tests, tests with coverage, unit tests, integration tests, safety tests, and a test watcher.
- **Logger Configuration:**
    - Adds `logger.config.json` to enable/disable debug logging for different modules.
- **Documentation:**
    - Adds `README.md` in the tests directory to document the test suite structure, running tests, test coverage, and mocking strategy.
- **Code Formatting and Logging:**
    - Adds logging to `motion-controller.js` and `logger.js` to improve debugging.
- **Coverage Report:**
    - Adds necessary files for coverage report generation.

--- a/space-maquette-frontend/space-maquette-server/package.json
+++ b/space-maquette-frontend/space-maquette-server/package.json
@@ -6,7 +6,14 @@
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:unit": "jest tests/unit",
+        "test:integration": "jest tests/integration",
+        "test:safety": "jest tests/integration/safety-features.test.js",
+        "test:watcher": "node scripts/test-watcher.js",
+        "pretest": "node -e \"console.log('Running tests, please wait...')\""
     },
     "dependencies": {
         "body-parser": "^1.20.1",
@@ -19,6 +26,8 @@
         "sqlite3": "^5.1.4"
     },
     "devDependencies": {
+        "cross-env": "^7.0.3",
+        "jest": "^29.7.0",
         "nodemon": "^2.0.20"
     }
 }
